[Google Fonts] Fix loading fonts from assets and offline behavior (#58)
* Update bundling instructions

* Load fonts for asset files, handle exceptions

* Add test to check exception is thrown if font cannot be loaded

* Update .gitignore

* Print error instead of throwing

Move try/catch block outside loadFontIfNecessary

* Revert "Print error instead of throwing"

This reverts commit 214616811e6091dc4422f9a6cbfd7d9314ae4f5e.

* Print error instead of throwing

* Rename method, add doc

* Clarify error message

* Fix typo

* Address feedback

* Bump to 0.3.7

* Ensure error message if allowHttp is false and font could not be loaded

* Fix typo

* Update google_fonts_base.dart

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@
 .history
 .svn/
 .firebase/
-.flutter-plugins-dependencies
 
 # IntelliJ related
 *.iml
@@ -27,6 +26,7 @@
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
+example/.flutter-plugins-dependencies
 .packages
 .pub-cache/
 .pub/
