--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
   http: ^0.12.0+2
   path_provider: ^1.4.0
-  crypto: 2.1.3
+  crypto: ^2.1.3
 
 dev_dependencies:
   flutter_test:
