--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   http: ^0.12.0+2
   path_provider: ^1.4.0
   crypto: ^2.1.3
+  pedantic: ^1.8.0
 
 dev_dependencies:
   flutter_test:
