--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: google_fonts
-description: A package to include fonts from fonts.google.com in your flutter app.
-version: 0.6.1
+description: A package to include fonts from fonts.google.com in your Flutter app.
+version: 0.6.2
 homepage: https://github.com/material-foundation/google-fonts-flutter/
 
 environment:
