--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: google_fonts
 description: A package to include fonts from fonts.google.com in your Flutter app.
-version: 0.7.0
+version: 0.7.0+1
 homepage: https://github.com/material-foundation/google-fonts-flutter/
 
 environment:
