--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,11 @@
 name: google_fonts
 description: A package to include fonts from fonts.google.com in your Flutter app.
-version: 1.0.0
+version: 1.1.0
 homepage: https://github.com/material-foundation/google-fonts-flutter/
 
 environment:
   sdk: ">=2.3.0 <3.0.0"
+  flutter: ^1.17.0
 
 dependencies:
   flutter:
