--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,7 +1,6 @@
 name: google_fonts_tester
 description: A Flutter application showcasing how to use the google_fonts package.
-
-version: 1.0.0+1
+publish_to: none
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
