--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: google_fonts
 description: A package to include fonts from fonts.google.com in your Flutter app.
-version: 1.1.1
+version: 1.1.2
 homepage: https://github.com/material-foundation/google-fonts-flutter/
 
 environment:
@@ -11,15 +11,15 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.12.0+2
-  path_provider: ^1.4.0
-  crypto: ^2.1.3
-  pedantic: ^1.8.0
+  path_provider: '>=1.4.0 <3.0.0'
+  crypto: '>=2.1.3 <4.0.0'
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   mockito: ^4.1.1
   mustache: ^1.1.1
+  pedantic: ^1.8.0
   protobuf: ^1.0.1
   protoc_plugin: any
   console: ^3.1.0
